@@ -1,3 +1,7 @@
+2009-09-20 Prevent exception in case of missing height and depth information
+           in a TeX font - this doesn't make the typesetting right, but prevents
+           the crash - JKS
+
 2009-09-15 Implement draw_text and draw_tex method of backend_base using
            the textpath module. Implement draw_tex method of the svg 
            backend. - JJL
